--- a/website/covid/templates/covid/activity.html
+++ b/website/covid/templates/covid/activity.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "covid/base.html" %}
 {% block content %}
 <h2>
     Activity Log
@@ -23,7 +23,7 @@
 {% endblock %}
 
 {% block javascript %}
-<!-- base.html allows addition of additional html here -->
+<!-- covid/base.html allows addition of additional html here -->
 
 <script src="https://code.highcharts.com/highcharts.js">
 </script>
