--- a/website/covid/templates/covid/base.html
+++ b/website/covid/templates/covid/base.html
@@ -3,69 +3,90 @@
 {% load static %}
 
 {% block nav-items %}
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a href="{% url 'covid-new-record' %}"
-                       title="Create a new record"
-                       class="nav-link" >
-                       New Record
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'covid-patients' %}"
-                       title="Records listed alphabetically."
-                       class="nav-link" >
-                       List Records
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'covid-recent-notes' %}"
-                       title="Recent Notes (last 7 days)"
-                       class="nav-link" >
-                       Recent Notes
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'covid-view-actions' %}"
-                       title="Actions required"
-                       class="nav-link" >
-                       Actions
-                    </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle"
-                       href="#"
-                       id="dropdown-resources"
-                       data-toggle="dropdown"
-                       aria-haspopup="true"
-                       aria-expanded="false">
-                        Resources
-                        <span class="caret"></span>
-                    </a>
-                    <div class="dropdown-menu"
-                         aria-labelledby=dropdown-resources>
-                        <a href="{% url 'pharmacy' %}"
-                           title = "pharmacy list" class="dropdown-item">
-                            Pharmacies
-                        </a>
-                        <a href="{% static 'covid/UDC-Referral-Form-V6.docx' %}"
-                                class="dropdown-item">
-                            UDC Referral Form V6 (docx)
-                        </a>
-                        <a href=
-                        "{% static 'covid/SDCEP-MADP-COVID-19-drug-supplement-update-110520.pdf' %}"
-                                class="dropdown-item">
-                            SDCEP Covid-19 guidance (pdf)
-                        </a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a href="{% url 'covid-activity' %}"
-                       title = "Activity Tracker"
-                       class="nav-link" >
-                       Activity Graph
-                    </a>
-                </li>
-            </ul>
+<ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+        <a href="{% url 'covid-homepage' %}" 
+            title="Covid Database"
+            class="nav-link">
+            Covid Home
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-search' %}"
+           title="Search record by name or date of birth"
+           class="nav-link" >
+           Search
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-new-record' %}"
+           title="Create a new record"
+           class="nav-link" >
+           New Record
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-records' %}"
+           title="Records listed chronologically."
+           class="nav-link" >
+           Record List (date)
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-patients' %}"
+           title="Records listed alphabetically."
+           class="nav-link" >
+           Record List
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-recent-notes' %}"
+           title="Recent Notes (last 7 days)"
+           class="nav-link" >
+           Recent Notes
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-view-actions' %}"
+           title="Actions required"
+           class="nav-link" >
+           Actions
+        </a>
+    </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle"
+           href="#"
+           id="dropdown-resources"
+           data-toggle="dropdown"
+           aria-haspopup="true"
+           aria-expanded="false">
+            Resources
+            <span class="caret"></span>
+        </a>
+        <div class="dropdown-menu"
+             aria-labelledby=dropdown-resources>
+            <a href="{% url 'pharmacy' %}"
+               title = "pharmacy list" class="dropdown-item">
+                Pharmacies
+            </a>
+            <a href="{% static 'covid/UDC-Referral-Form-V6.docx' %}"
+                    class="dropdown-item">
+                UDC Referral Form V6 (docx)
+            </a>
+            <a href=
+            "{% static 'covid/SDCEP-MADP-COVID-19-drug-supplement-update-110520.pdf' %}"
+                    class="dropdown-item">
+                SDCEP Covid-19 guidance (pdf)
+            </a>
+        </div>
+    </li>
+    <li class="nav-item">
+        <a href="{% url 'covid-activity' %}"
+           title = "Activity Tracker"
+           class="nav-link" >
+           Activity Graph
+        </a>
+    </li>
+</ul>
 
 {% endblock %}
